k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:058264452229:certificate/1fea0848-c9ea-4390-9d66-917d418bf8fd
    alb.ingress.kubernetes.io/group.name: ingress-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: front.cccr-opensource.com
  name: front-ingress
spec:
  ingressClassName: alb
  rules:
  - host: front.cccr-opensource.com
    http:
      paths:
        - backend:
            service:
              name: frontend-service
              port:
                number: 80
          path: /
          pathType: Prefix
